--- a/proyectoFinalRelease/src/main/resources/static/views/activeSprint.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/activeSprint.html
@@ -7,7 +7,7 @@
 <body>
 
 <!-- The dnd-list directive allows to drop elements into it.
-     The dropped data will be added to the referenced list -->
+     The dropped data will be added to the referenced list probando github -->
 <div class="page-header">
     <h1>Active Sprint <small>{{actualSprint}}</small></h1>
 </div>
