--- a/proyectoFinalRelease/src/main/resources/static/views/activeSprint.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/activeSprint.html
@@ -9,7 +9,7 @@
 <!-- The dnd-list directive allows to drop elements into it.
      The dropped data will be added to the referenced list probando github -->
 <div class="page-header">
-    <h1>Active Sprint probando atr<small>{{actualSprint}}</small></h1>
+    <h1>Active Sprint probando atrADAS<small>{{actualSprint}}</small></h1>
 </div>
 
 <div>
