--- a/proyectoFinalRelease/src/main/resources/static/views/backlog.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/backlog.html
@@ -11,15 +11,17 @@
     <h1>Backlog</h1>
 </div>
 
-<button  class="btn btn-primary " ng-click="newTaskModal('Backlog',1)">Add Task</button>
+<button class="btn btn-primary " ng-click="newTaskModal('Backlog',1)">Add Task to Backlog</button>
 <br>
 <br>
 <div style="max-height: 60vh" class="list-group pre-scrollable"  data-ng-init="loadBacklog()">
-    <a href="#" class="list-group-item active" ng-repeat="tasks in dataSource">
+    <a class="list-group-item active" ng-repeat="tasks in dataSource">
         <h4 class="list-group-item-heading">{{tasks.name}}</h4>
         <p class="list-group-item-text">Priority: {{tasks.priority}}</p>
         <p class="list-group-item-text">Creation Date: {{tasks.creationDate}}</p>
         <p class="list-group-item-text">Modification Date: {{tasks.modificationDate}}</p>
+        <button class="btn btn-success">Include Task in Sprint</button>
+        <button class="btn btn-danger" ng-click="deleteTask(tasks.taskId)">Delete Task</button>
     </a>
 </div>
 
