--- a/proyectoFinalRelease/src/main/resources/static/views/simpleTaskList.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/simpleTaskList.html
@@ -1,6 +1,6 @@
 <!-- The dnd-list directive allows to drop elements into it.
      The dropped data will be added to the referenced list -->
-<ul dnd-list="list" style="max-height: 60vh" class="pre-scrollable" dnd-drop="moveTask(item.taskId,listName)">
+<ul dnd-list="list" style="max-height: 60vh" class="pre-scrollable" dnd-drop="moveTask(item,listName)">
     <!-- The dnd-draggable directive makes an element draggable and will
          transfer the object that was assigned to it. If an element was
          dragged away, you have to remove it from the original list
