--- a/proyectoFinalRelease/src/main/resources/static/views/activeSprint.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/activeSprint.html
@@ -19,6 +19,10 @@
         <option ng-repeat="sprint in sprints"  value="{{sprint}}">{{sprint}}</option>
 
     </select>
+
+    <button type="button" id="addListButton" class="btn btn-success">Add List to this Sprint</button>
+    <button type="button" id="addTaskButton" disabled="true" class="btn btn-success" ng-click="newTaskModal('Backlog',backLogIdCurrentSprint)">Add Task </button>
+
 <div style="float: right">
     Order By:
     <select class="btn btn-primary dropdown-toggle" id="orderSelect" ng-model="actualOrder" data-ng-init='getAllTaskLists()'>
@@ -26,7 +30,6 @@
         <option value=" ">No Order</option>
         <option value="priority">Priority</option>
         <option value="creationDate">Creation Date</option>
-
     </select>
 </div>
 
