--- a/proyectoFinalRelease/src/main/resources/static/views/simpleTaskList.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/simpleTaskList.html
@@ -12,7 +12,7 @@
         dnd-selected="models.selected = item"
         ng-class="{'selected': models.selected === item}"
     >
-        <span style="float:right; padding-left: 10px" class="glyphicon glyphicon-pencil"></span>
+        <span style="float:right; padding-left: 10px" class="glyphicon glyphicon-pencil" ng-click="editTask(item)"></span>
         <span style="float:right; padding-left: 5px" class="glyphicon glyphicon-trash" ng-click="deleteTask(item.taskId)"></span>
         <br>
         <span class="label label-info">Task Name: {{item.name}}</span>
