ordered lists, validation messages

--- a/proyectoFinalRelease/src/main/resources/static/views/addTaskModal.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/addTaskModal.html
@@ -19,7 +19,7 @@
 
 
             <label for="estimatedTime">Estimated time:</label>
-            <input id="estimatedTime" required="required" class="form-control" type="number" ng-model="$taskModalCtrl.instancia.estimatedTime"/><br/>
+            <input id="estimatedTime"  class="form-control" type="number" ng-model="$taskModalCtrl.instancia.estimatedTime"/><br/>
 
             <input id="sprint" class="form-control" readonly type="hidden" ng-model="$taskModalCtrl.instancia.taskList.sprintName" value="{{actualSprint}}"/><br/>
 
