--- a/proyectoFinalRelease/src/main/resources/static/views/simpleTaskList.html
+++ b/proyectoFinalRelease/src/main/resources/static/views/simpleTaskList.html
@@ -19,7 +19,7 @@
         <br>
         <span class="label label-info">Creation Date: {{item.creationDate}}</span>
         <br>
-        <span class="label label-info">Modification Date: {{item.modificationDate}}</span>
+        <span class="label label-info">Modification Date: {{item.modificactionDate}}</span>
         <br>
         <span class="label label-info">Priority: {{item.priority}}</span>
         <br>
